--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,15 +6,16 @@
     box-sizing: border-box;
     color: white;
     font-family: 'Rubik', sans-serif;
-    background-image: url("./assets/img/Group 98.svg");
     background-color: black;
     
 }
 
 
-.fa-solid{
-    color: white;
 
+.fa-bars{
+    color: white;
+    font-size: 30px;
+    position: fixed;
 }
 .nav{
     display: flex;
@@ -26,36 +27,47 @@
 
 .nav--menu{
     position: absolute;
-    width: 100%;
-    background-color: rgb(7, 7, 7);
+    background-color: rgba(7, 7, 7, 0.829);
     right: 0;
     top: 40px;
-    min-height: calc(100vh - 40px);
     display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 1.5rem 1rem
+    padding: 1.5rem 1rem;
+    position: fixed;
 }
 
 .nav--item{
     list-style: none;
+    background-color: transparent
 }
 
 .nav--link{
     color: #adadad;
     text-decoration: none;
+    background: center;
 }
 
 .nav--menu.visible{
     display: flex;
 }
-.foto{
+.photo--content{
     display: flex;
-    height: 180px;
-    width: 150px;
+    justify-content: center;
+    height: 300px;
+    background: center;
+    margin: auto auto;
+    padding-top: 4em;
+    background-image: url(../img/Group\ 99.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.photo{
+    height: 200px;
+    width: 160px;
     border-radius: 100px;
-    margin: 1rem  auto auto; 
 }
 h1{
     font-size: 40px;
@@ -63,25 +75,39 @@ h1{
     display: flex;
     flex-direction: column;
     width: 300px;
-    margin: 0 auto
+    margin: 0 auto;
+    background: center;
+    margin-bottom: 1rem;
 }
 .saludo{
     font-size: 25px;
     color: #dadada;
+    background: center;
 }
 
 .redes-sociales{
     display: flex;
     justify-content: center;
     column-gap: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 7rem;
+    background: center;
+    margin-inline: auto;
+    padding-bottom: 10rem;
+    background-image: url(../img/Group\ 98.svg);
+    background-size: 110%;
 }
 .subtitulo{
     font-weight: normal;
     padding-left: 1rem;
     padding-bottom: 2rem;
-    font-size: 25px
+    font-size: 25px;
+    background: center;   
+}
+.subtitulo-dos{
+    padding-top: 3rem;
+    background-image: url(../img/Group\ 97.svg);
+    background-repeat: no-repeat;
+    background-position: calc(100% + 3rem);
+    background-size: contain;
 }
 .parrafo-mi{
     display: block;
@@ -89,7 +115,7 @@ h1{
     text-align: center;
     color: #dadada;
     line-height: 1.4;
-    padding-bottom: 4rem;    
+    background: center;   
 }
 
 .habilidades{
@@ -101,7 +127,84 @@ h1{
 }
 .habilidades-items{
     text-align: center;
+    margin: 1rem;
+    text-align: -webkit-center;
 }
 .habilidaes-items-text{
     text-align: center;
+}
+.content-svg-habilidades{
+    border-radius: 100%;
+    background-color: #302e2e;
+    width: 100px;    
+    height: 100px;
+    display: flex;
+    margin-bottom: 1rem;
+}
+.habilidades-svg{
+    margin: auto;
+    background: center;
+}
+
+.experienc-content{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+.experienc-content-sub{
+    display: flex;
+    flex-direction: column;
+    flex: 1.3;
+}
+.experienc-time{
+    flex: 1;
+}
+.gris{
+    color: #adadad;
+}
+.subtitulo-portafolio{
+    padding-top: 6rem;
+    background-image: url(../img/Group\ 97.svg);
+    background-repeat: no-repeat;
+    background-position:bottom ;
+    background-size: 100px;
+    background-position: calc(-7vh) ;
+    padding-bottom: 1rem;
+}
+
+.ilustraciones{
+    width: 100%;
+    padding: 1rem;
+}
+.contacto{
+    display: flex;
+    justify-content: space-evenly;
+}
+.contacto-items{
+    text-align: -webkit-center;
+
+}
+.contacto-items-text{
+    text-align: center;
+}
+
+.content-svg{
+    border:solid #fafafa;
+    border-radius: 100%;
+    width: 100px;    
+    height: 100px;
+    display: flex;
+    margin-bottom: 1rem;
+}
+.contacto-svg{
+    margin: auto;
+}
+.saludo-fin{
+    color: #adadad;
+    font-size: 25px;
+}
+.fa-heart{
+    margin-inline: 0.5rem;
+    color: #adadad;
 }
