--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,8 @@
 
 .nav--item{
     list-style: none;
-    background-color: transparent
+    background-color: transparent;
+    font-size: 20px;    
 }
 
 .nav--link{
