--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body{
 .nav--menu{
     position: absolute;
     background-color: rgba(7, 7, 7, 0.829);
-    right: 0;
+    right: 2rem;
     top: 40px;
     display: none;
     flex-direction: column;
@@ -35,12 +35,13 @@ body{
     align-items: center;
     padding: 1.5rem 1rem;
     position: fixed;
+    border-radius: 20%;
 }
 
 .nav--item{
     list-style: none;
     background-color: transparent;
-    font-size: 25px;    
+    font-size: 20px;    
 }
 
 .nav--link{
