--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,8 @@ iframe{
     height: 100px;
     display: flex;
     margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 .contacto-svg{
     margin: auto;
